--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_songs"
+        android:id="@+id/nav_todays_dua"
         android:icon="@drawable/ic_today"
         android:title="Today's Dua"/>
 
     <item
-        android:id="@+id/navigation_albums"
+        android:id="@+id/nav_all_duas"
         android:icon="@drawable/ic_all"
         android:title="All Dua's"/>
 
     <item
-        android:id="@+id/navigation_artists"
+        android:id="@+id/nav_fav_duas"
         android:icon="@drawable/ic_favs"
         android:title="Saved"/>
 
