--- a/app/src/main/res/layout/fragment_daily_dua.xml
+++ b/app/src/main/res/layout/fragment_daily_dua.xml
@@ -35,6 +35,7 @@
         android:id="@+id/bismillah"
         android:layout_width="209dp"
         android:layout_height="39dp"
+        android:contentDescription='"Bismillah text"'
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_heading"
